--- a/package.json
+++ b/package.json
@@ -1,29 +1,57 @@
 {
-  "name": "@advanced-rest-client/paper-chip-input",
   "description": "A material design input with chips",
-  "version": "2.0.7",
+  "keywords": [
+    "api-components"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/advanced-rest-client/paper-chip-input.git"
+  },
+  "name": "@advanced-rest-client/paper-chip-input",
+  "version": "3.0.0-preview.1",
   "license": "Apache-2.0",
-  "main": "paper-chip-input.html",
+  "main": "paper-chip-input.js",
   "authors": [
     "Pawel Psztyc",
     "The Advanced REST client authors <arc@mulesoft.com>"
   ],
   "devDependencies": {
-    "@polymer/gen-typescript-declarations": "^1.6.1"
+    "@polymer/gen-typescript-declarations": "^1.6.1",
+    "@polymer/iron-demo-helpers": "^3.0.0",
+    "@polymer/iron-component-page": "^4.0.0",
+    "@polymer/iron-test-helpers": "^3.0.0",
+    "@webcomponents/webcomponentsjs": "^2.0.0",
+    "@polymer/iron-icons": "^3.0.0",
+    "@polymer/test-fixture": "^4.0.2",
+    "chai": "^4.2.0",
+    "mocha": "^5.2.0",
+    "sinon": "^7.2.3",
+    "wct-mocha": "^1.0.0"
   },
-  "private": false,
   "scripts": {
     "lint": "polymer lint paper-chip-input.html",
     "test-sauce": "polymer test --plugin sauce --job-name \"paper-chip-input:local-test\"",
     "test": "polymer test --plugin local",
     "update-types": "gen-typescript-declarations --deleteExisting --outDir ."
   },
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/advanced-rest-client/paper-chip-input.git"
-  },
   "bugs": {
     "url": "https://github.com/advanced-rest-client/paper-chip-input/issues",
     "email": "arc@mulesoft.com"
+  },
+  "contributors": [
+    "Pawel Psztyc",
+    "The Advanced REST client authors <arc@mulesoft.com>"
+  ],
+  "dependencies": {
+    "@polymer/polymer": "^3.0.0",
+    "@polymer/paper-input": "^3.0.0",
+    "@polymer/iron-a11y-keys": "^3.0.0",
+    "@polymer/paper-item": "^3.0.0",
+    "@polymer/paper-ripple": "^3.0.0",
+    "@polymer/paper-styles": "^3.0.0",
+    "@polymer/iron-icon": "^3.0.0",
+    "@polymer/iron-scroll-target-behavior": "^3.0.0",
+    "@polymer/iron-overlay-behavior": "^3.0.0",
+    "@polymer/iron-selector": "^3.0.0"
   }
 }
