Updating test configuration

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: node_js
-node_js: 8
+node_js: stable
 sudo: required
 before_script: npm install -g polymer-cli @advanced-rest-client/wct-istanbub
 addons:
-  firefox: latest
+  # firefox: latest
   apt:
     sources:
       - google-chrome
