--- a/package.json
+++ b/package.json
@@ -16,22 +16,27 @@
     "The Advanced REST client authors <arc@mulesoft.com>"
   ],
   "devDependencies": {
+    "@advanced-rest-client/arc-demo-helper": "^1.0.1",
+    "@advanced-rest-client/testing-karma-sl": "^1.0.2",
+    "@open-wc/testing": "^0.11.1",
+    "@open-wc/testing-karma": "^2.0.0",
     "@polymer/gen-typescript-declarations": "^1.6.1",
-    "@polymer/iron-component-page": "^4.0.0",
-    "@polymer/iron-demo-helpers": "^3.0.0",
     "@polymer/iron-icons": "^3.0.0",
     "@polymer/iron-test-helpers": "^3.0.0",
     "@polymer/test-fixture": "^4.0.2",
     "@webcomponents/webcomponentsjs": "^2.2.10",
-    "chai": "^4.2.0",
-    "mocha": "^5.2.0",
+    "owc-dev-server": "^0.3.0",
+    "webpack-merge": "^4.1.5",
     "sinon": "^7.3.2",
-    "wct-mocha": "^1.0.0"
+    "lit-html": "^1.0.0"
   },
   "scripts": {
-    "lint": "polymer lint paper-chip-input.html",
-    "test-sauce": "polymer test --plugin sauce --job-name \"paper-chip-input:local-test\"",
-    "test": "polymer test --plugin local",
+    "start": "owc-dev-server -o",
+    "test": "karma start --coverage",
+    "test:watch": "karma start --auto-watch=true --single-run=false",
+    "test:legacy": "karma start --legacy --coverage",
+    "test:legacy:watch": "karma start --legacy --auto-watch=true --single-run=false",
+    "test:sl": "karma start karma.sl.config.js --coverage",
     "update-types": "gen-typescript-declarations --deleteExisting --outDir ."
   },
   "bugs": {
@@ -43,7 +48,7 @@
     "The Advanced REST client authors <arc@mulesoft.com>"
   ],
   "dependencies": {
-    "@advanced-rest-client/paper-chip": "^3.0.0",
+    "@advanced-rest-client/paper-chip": "^3.1.0",
     "@polymer/iron-a11y-keys": "^3.0.0",
     "@polymer/iron-icon": "^3.0.0",
     "@polymer/iron-overlay-behavior": "^3.0.0",
