--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ addons:
     packages:
       - google-chrome-stable
 script:
-  - xvfb-run polymer test --module-resolution=node --npm --plugin local
+  - npm run test
   - if [ "${TRAVIS_PULL_REQUEST}" = "false" ]; then npm run test:sl; fi
 env:
   global:
