--- a/package.json
+++ b/package.json
@@ -16,20 +16,21 @@
     "The Advanced REST client authors <arc@mulesoft.com>"
   ],
   "devDependencies": {
-    "@advanced-rest-client/arc-demo-helper": "^1.0.1",
+    "@advanced-rest-client/arc-demo-helper": "^1.0.3",
     "@advanced-rest-client/testing-karma-sl": "^1.0.2",
     "@open-wc/testing": "^0.11.1",
-    "@open-wc/testing-karma": "^2.0.4",
-    "@polymer/gen-typescript-declarations": "^1.6.1",
+    "@open-wc/testing-karma": "^2.0.16",
+    "@polymer/gen-typescript-declarations": "^1.6.2",
     "@polymer/iron-icons": "^3.0.0",
     "@webcomponents/webcomponentsjs": "^2.2.10",
-    "lit-html": "^1.0.0",
-    "owc-dev-server": "^0.3.0",
+    "lit-html": "^1.1.1",
+    "es-dev-server": "^1.5.0",
     "sinon": "^7.3.2",
     "webpack-merge": "^4.1.5"
   },
   "scripts": {
-    "start": "owc-dev-server -o",
+    "start": "es-dev-server --app-index demo/index.html --node-resolve --open --watch",
+    "start:compatibility": "es-dev-server --app-index demo/index.html --compatibility all --node-resolve --open --watch",
     "test": "karma start --coverage",
     "test:watch": "karma start --auto-watch=true --single-run=false",
     "test:legacy": "karma start --legacy --coverage",
@@ -47,13 +48,14 @@
   ],
   "dependencies": {
     "@advanced-rest-client/arc-overlay-mixin": "^1.0.1",
-    "@advanced-rest-client/arc-scroll-target-mixin": "^1.0.0",
+    "@advanced-rest-client/arc-scroll-target-mixin": "^1.0.2",
     "@advanced-rest-client/paper-chip": "^3.1.0",
     "@polymer/iron-a11y-keys": "^3.0.0",
     "@polymer/iron-icon": "^3.0.0",
     "@polymer/iron-selector": "^3.0.0",
     "@polymer/paper-input": "^3.0.2",
     "@polymer/paper-item": "^3.0.0",
-    "@polymer/paper-ripple": "^3.0.0"
+    "@polymer/paper-ripple": "^3.0.0",
+    "lit-element": "^2.2.0"
   }
 }
