--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "type": "git",
     "url": "git://github.com/advanced-rest-client/paper-chip-input.git"
   },
+  "bugs": {
+    "url": "https://github.com/advanced-rest-client/paper-chip-input/issues",
+    "email": "arc@mulesoft.com"
+  },
   "name": "@advanced-rest-client/paper-chip-input",
   "version": "3.1.0",
   "license": "Apache-2.0",
@@ -15,34 +19,6 @@
     "Pawel Psztyc",
     "The Advanced REST client authors <arc@mulesoft.com>"
   ],
-  "devDependencies": {
-    "@advanced-rest-client/a11y-suite": "^1.0.0",
-    "@advanced-rest-client/arc-demo-helper": "^1.0.3",
-    "@advanced-rest-client/testing-karma-sl": "^1.0.2",
-    "@open-wc/testing": "^0.11.1",
-    "@open-wc/testing-karma": "^2.0.16",
-    "@polymer/gen-typescript-declarations": "^1.6.2",
-    "@polymer/iron-icons": "^3.0.0",
-    "@webcomponents/webcomponentsjs": "^2.2.10",
-    "lit-html": "^1.1.1",
-    "es-dev-server": "^1.5.0",
-    "sinon": "^7.3.2",
-    "webpack-merge": "^4.1.5"
-  },
-  "scripts": {
-    "start": "es-dev-server --app-index demo/index.html --node-resolve --open --watch",
-    "start:compatibility": "es-dev-server --app-index demo/index.html --compatibility all --node-resolve --open --watch",
-    "test": "karma start --coverage",
-    "test:watch": "karma start --auto-watch=true --single-run=false",
-    "test:legacy": "karma start --legacy --coverage",
-    "test:legacy:watch": "karma start --legacy --auto-watch=true --single-run=false",
-    "test:sl": "karma start karma.sl.config.js --legacy --coverage",
-    "update-types": "gen-typescript-declarations --deleteExisting --outDir ."
-  },
-  "bugs": {
-    "url": "https://github.com/advanced-rest-client/paper-chip-input/issues",
-    "email": "arc@mulesoft.com"
-  },
   "contributors": [
     "Pawel Psztyc",
     "The Advanced REST client authors <arc@mulesoft.com>"
@@ -58,5 +34,47 @@
     "@polymer/paper-item": "^3.0.0",
     "@polymer/paper-ripple": "^3.0.0",
     "lit-element": "^2.2.0"
+  },
+  "devDependencies": {
+    "@advanced-rest-client/a11y-suite": "^1.0.0",
+    "@advanced-rest-client/arc-demo-helper": "^1.0.3",
+    "@advanced-rest-client/testing-karma-sl": "^1.0.2",
+    "@advanced-rest-client/eslint-config": "^1.0.5",
+    "@commitlint/cli": "^8.1.0",
+    "@commitlint/config-conventional": "^7.0.0",
+    "@open-wc/prettier-config": "^0.1.0",
+    "@open-wc/testing": "^0.11.1",
+    "@open-wc/testing-karma": "^2.0.16",
+    "@polymer/gen-typescript-declarations": "^1.6.2",
+    "@polymer/iron-icons": "^3.0.0",
+    "@webcomponents/webcomponentsjs": "^2.2.10",
+    "husky": "^1.0.0",
+    "lint-staged": "^8.0.0",
+    "lit-html": "^1.1.1",
+    "es-dev-server": "^1.5.0",
+    "sinon": "^7.3.2",
+    "webpack-merge": "^4.1.5"
+  },
+  "scripts": {
+    "start": "es-dev-server --app-index demo/index.html --node-resolve --open --watch",
+    "start:compatibility": "es-dev-server --app-index demo/index.html --compatibility all --node-resolve --open --watch",
+    "test": "karma start --coverage",
+    "test:watch": "karma start --auto-watch=true --single-run=false",
+    "test:legacy": "karma start --legacy --coverage",
+    "test:legacy:watch": "karma start --legacy --auto-watch=true --single-run=false",
+    "test:sl": "karma start karma.sl.config.js --legacy --coverage",
+    "update-types": "gen-typescript-declarations --deleteExisting --outDir .",
+    "lint:eslint": "eslint --ext .js,.html .",
+    "format:eslint": "eslint --ext .js,.html . --fix",
+    "lint:prettier": "prettier \"**/*.js\" --list-different || (echo '↑↑ these files are not prettier formatted ↑↑' && exit 1)",
+    "format:prettier": "prettier \"**/*.js\" --write",
+    "lint": "npm run lint:eslint && npm run lint:prettier",
+    "format": "npm run format:eslint && npm run format:prettier"
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix",
+      "git add"
+    ]
   }
 }
