chore: started upgrading to anypoint components

--- a/package.json
+++ b/package.json
@@ -29,50 +29,49 @@
   "dependencies": {
     "@advanced-rest-client/arc-overlay-mixin": "^1.0.3",
     "@advanced-rest-client/arc-scroll-target-mixin": "^1.0.2",
-    "@advanced-rest-client/paper-chip": "^3.1.0",
+    "@advanced-rest-client/paper-chip": "^3.1.1",
     "@polymer/iron-a11y-keys": "^3.0.0",
     "@polymer/iron-icon": "^3.0.0",
-    "@polymer/iron-selector": "^3.0.0",
-    "@polymer/paper-input": "^3.0.2",
-    "@polymer/paper-item": "^3.0.0",
+    "@anypoint-web-components/anypoint-selector": "^1.0.2",
+    "@anypoint-web-components/anypoint-input": "^0.2.2",
+    "@anypoint-web-components/anypoint-item": "^1.0.3",
     "@polymer/paper-ripple": "^3.0.0",
     "lit-element": "^2.2.1"
   },
   "devDependencies": {
-    "@advanced-rest-client/a11y-suite": "^1.0.0",
     "@advanced-rest-client/arc-demo-helper": "^1.0.14",
     "@advanced-rest-client/eslint-config": "^1.1.2",
+    "@advanced-rest-client/prettier-config": "^0.1.0",
     "@advanced-rest-client/testing-karma-sl": "^1.0.4",
     "@commitlint/cli": "^8.1.0",
     "@commitlint/config-conventional": "^7.0.0",
-    "@open-wc/prettier-config": "^0.1.0",
-    "@open-wc/testing": "^0.11.1",
-    "@open-wc/testing-karma": "^2.0.16",
+    "@open-wc/testing": "^2.3.3",
+    "@open-wc/testing-karma": "^3.1.29",
     "@polymer/gen-typescript-declarations": "^1.6.2",
     "@polymer/iron-icons": "^3.0.0",
-    "@webcomponents/webcomponentsjs": "^2.2.10",
-    "es-dev-server": "^1.17.1",
+    "deepmerge": "^4.0.0",
+    "es-dev-server": "^1.16.0",
     "husky": "^1.0.0",
+    "karma": "^4.3.0",
     "lint-staged": "^8.0.0",
-    "lit-html": "^1.1.2",
-    "sinon": "^7.4.1",
-    "webpack-merge": "^4.2.2"
+    "sinon": "^7.4.1"
   },
   "scripts": {
+    "test": "karma start --coverage",
+    "update-types": "gen-typescript-declarations --deleteExisting --outDir .",
     "start": "es-dev-server --app-index demo/index.html --node-resolve --open --watch",
     "start:compatibility": "es-dev-server --app-index demo/index.html --compatibility all --node-resolve --open --watch",
-    "test": "karma start --coverage",
-    "test:watch": "karma start --auto-watch=true --single-run=false",
-    "test:legacy": "karma start --legacy --coverage",
-    "test:legacy:watch": "karma start --legacy --auto-watch=true --single-run=false",
-    "test:sl": "karma start karma.sl.config.js --legacy --coverage",
-    "update-types": "gen-typescript-declarations --deleteExisting --outDir .",
     "lint:eslint": "eslint --ext .js,.html .",
     "format:eslint": "eslint --ext .js,.html . --fix",
     "lint:prettier": "prettier \"**/*.js\" --list-different || (echo '↑↑ these files are not prettier formatted ↑↑' && exit 1)",
     "format:prettier": "prettier \"**/*.js\" --write",
     "lint": "npm run lint:eslint && npm run lint:prettier",
-    "format": "npm run format:eslint && npm run format:prettier"
+    "format": "npm run format:eslint && npm run format:prettier",
+    "test:watch": "karma start --auto-watch=true --single-run=false",
+    "test:legacy": "karma start --legacy --coverage",
+    "test:legacy:watch": "karma start --legacy --auto-watch=true --single-run=false",
+    "test:sl": "karma start karma.sl.config.js --legacy --coverage",
+    "generate-model": "node demo/model.js"
   },
   "lint-staged": {
     "*.js": [
